--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i> Trang Chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="/products"><i class="fas fa-box"></i> Sản Phẩm</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact"><i class="fas fa-envelope"></i> Liên Hệ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/model"><i class="fas fa-brain"></i> AI Model</a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/analytics"><i class="fas fa-chart-bar"></i> Analytics</a></li>
                 </ul>
             </div>
