Change brand name from ShopAI to Shop Dê!

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set page_type = "analytics" %}
 
-{% block title %}Analytics Dashboard - ShopAI{% endblock %}
+{% block title %}Analytics Dashboard - Shop Dê!{% endblock %}
 
 {% block extra_css %}
 <style>
