--- a/templates/model_info.html
+++ b/templates/model_info.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set page_type = "model" %}
 
-{% block title %}AI Model Info - ShopAI{% endblock %}
+{% block title %}AI Model Info - Shop Dê!{% endblock %}
 
 {% block extra_css %}
 <style>
