--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,7 +2,7 @@
 {% set page_type = "product_detail" %}
 {% set product_id = product.id %}
 
-{% block title %}{{ product.name }} - ShopAI{% endblock %}
+{% block title %}{{ product.name }} - Shop Dê!{% endblock %}
 
 {% block content %}
 <nav aria-label="breadcrumb" class="mb-4">
