--- a/templates/products.html
+++ b/templates/products.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set page_type = "products" %}
 
-{% block title %}Sản Phẩm - ShopAI{% endblock %}
+{% block title %}Sản Phẩm - Shop Dê!{% endblock %}
 
 {% block content %}
 <h2 class="mb-4"><i class="fas fa-box"></i> Danh Sách Sản Phẩm</h2>
