--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set page_type = "contact" %}
 
-{% block title %}Liên Hệ - ShopAI{% endblock %}
+{% block title %}Liên Hệ - Shop Dê!{% endblock %}
 
 {% block content %}
 <div class="row">
